# example-bazel-repo

./: .bazeliskrc  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTkwNzE1MjYzOQ==
project-backend/: BUILD
project-backend/cmd/server/: BUILD.bazel  main.go
project-backend/pkg/lib/: BUILD.bazel
project-frontend/: BUILD  MODULE.bazel  package-lock.json  package.json  pnpm-lock.yaml
projectA/: package-lock.json  package.json
projectB/cmd/server/: main.go
projectB/pkg/lib/: BUILD.bazel  lib.go
