load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/hermanbanken/example-bazel-monorepo/projectB/cmd/server",
    visibility = ["//visibility:private"],
    deps = ["//projectB/pkg/lib"],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
