load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/hermanbanken/example-bazel-monorepo/project-backend/cmd/server",
    visibility = ["//visibility:private"],
    deps = ["//project-backend/pkg/lib"],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
